* 2005-05-10 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fit dataset options now have drop down menus
	- Added \font{fontname}{text} and \size{[+-]fontsize}{text} to
	LaTeX-like parser to change font or font size
	- Also some bug fixes to LaTeX-like parser
	
* 2005-05-09 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix problem with log axis if minimum is zero
	- Highlight setting label if has mouse over / focus / context menu
	- Remove label from top of context menus
	- Fix properties shortcut label
	
* 2005-05-08 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add embed module to embed Veusz in other Python apps
	
* 2005-05-07 Jeremy Sanders <jeremy@jeremysanders.net>
	- Complete data editing dialog
	- Add data new dialog
	- Add data new dialog to Data menu in main window
	
* 2005-05-04 Jeremy Sanders <jeremy@jeremysanders.net>
	- Put in Jamie Crummy's patch to show "Untitled" for new document
	
* 2005-05-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Take out toolbar position hack from mainwindow
	- More work on data edit dialog
	
* 2005-05-02 Jeremy Sanders <jeremy@jeremysanders.net>
	- Axes on other side of graph are automatically reflected
	- Reflected text rotated by 90 rather than 270 degrees
	- Put property name on property context menu
	- Shortcut keys added to quitting dialog
	- Slight tooltip fixes in property editor
	- Property context menu added for items in widget tree
	- Widgets can now be renamed (Rename command added too)
	- Labels for properties can now have keyboard focus. This allows
	context menu to be used from keyboard.
	- Widget names cannot contain /
	
* 2005-05-01 Jeremy Sanders <jeremy@jeremysanders.net>
	- Put in patch from James Graham to choose from list of fonts
	- Use context menu for settings, rather than button
	- Add missing descr for marker and markerSize
	- View menu can show/hide dock windows
	
* 2005-04-28 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed colour of axis/tick labels
